--- a/stylesheet.css
+++ b/stylesheet.css
@@ -158,6 +158,11 @@ header {
   color: white;
 }
 
+.lesson-icon img {
+  width: 50%;
+  height: 50%;
+}
+
 .text-contents {
   width: 80%;
   display: inline-block;
