--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+  background-image: url(https://image.freepik.com/free-vector/modern-memphis-background-with-elements_1361-2179.jpg);
   background-size: cover;
   color: white;
   text-align: center;
