--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,6 +106,11 @@ header {
   float: left;
 }
 
+.header-left img{
+  width: 50%;
+  height: 50%;
+}
+
 .header-right {
   float: right;
   margin-right: -25px;
