--- a/responsive.css
+++ b/responsive.css
@@ -11,9 +11,6 @@
   .heading h2 {
     font-size: 20px;
   }
-  .menu-icon {
-    display: none;
-  }
 }
 
 /* Untuk Smartphone */
@@ -44,6 +41,7 @@
   
   .menu-icon {
     display: block;
+    visibility: visible;
   }
   
   .top-wrapper h1{
