--- a/stylesheet.css
+++ b/stylesheet.css
@@ -163,7 +163,7 @@ header {
   position: relative;
   top: 44%;
   width: 50%;
-  color: white;
+  color: blue;
   padding: 0 45px;
   /*Animasi*/  
   animation-name: example;
