--- a/stylesheet.css
+++ b/stylesheet.css
@@ -163,18 +163,7 @@ header {
   position: relative;
   top: 44%;
   width: 100%;
-  color: #b8b894;
-  padding: 0 50px;
-  /*Animasi*/  
-  animation-name: example;
-  animation-duration: 3s;  
-  animation-delay: 2s;
-  animation-fill-mode: backwards;
-}
-
-@keyframes example {
-  from {top: 70px; background-color: black;}
-  to {top: 0px;}
+  color: #8a8a5c;
 }
 
 .lesson-icon img {
