--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,16 +109,15 @@ header {
 .header-left img {
   width: 27%;
   position: relative;
-  /*Animasi*/  
+  /*Animasi*/
   animation-name: example;
-  animation-duration: 3s;  
-  animation-delay: 2s;
-  animation-fill-mode: backwards;  
+  animation-duration: 3s;;
+  animation-fill-mode: forwards;  
 }
 
 @keyframes example {
-  from {left: 0px; background-color: black;}
-  to {left: 50px;}
+  from {left: 0px;}
+  to {left: 200px; background-color: blue;}
 }
 
 .header-right {
