--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,7 +117,7 @@ header {
 
 @keyframes example {
   from {left: 0px;}
-  to {left: 200px; background-color: blue;}
+  to {left: 200px;}
 }
 
 .header-right {
