--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,8 +116,9 @@ header {
 }
 
 @keyframes example {
-  from {left: 0px;}
-  to {left: 200px;}
+  0%   {left:0px;}
+  50%  {left:200px;}
+  100% {left:0px;}
 }
 
 .header-right {
