--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,8 +111,7 @@ header {
   position: relative;
   /*Animasi*/
   animation-name: example;
-  animation-duration: 3s;;
-  animation-fill-mode: forwards;  
+  animation-duration: 3s;
 }
 
 @keyframes example {
