--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@ a {
 }
 
 .signup {
-  background-color: #239b76;
+  background-color: #669999;
 }
 
 .facebook {
@@ -201,7 +201,7 @@ header {
 
 .message {
   padding: 15px 40px;
-  background-color: #5dca88;
+  background-color: #85adad;
   cursor: pointer;
   box-shadow: 0 7px #1a7940;
 }
@@ -235,5 +235,3 @@ footer {
   display: none;
   visibility: hidden;
 }
-
-/*Animasi*/
