--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,6 +125,7 @@ header {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #333;
 }
 
 /* Float the list items side by side */
