--- a/responsive.css
+++ b/responsive.css
@@ -68,7 +68,8 @@
   }
   .header-right.responsive li {
     float: none;
-    display: inline;
+    display: inline;   
+    background-color: rgba(112, 128, 145, 0.3);
   }
   .header-right.responsive li a {
     display: block;
