--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,6 @@
 /* Untuk Tablet */
 @media all and (max-width: 1000px) {
-  .lesson {
+  .about {
     width: 50%;
     margin-bottom: 50px;
   }
@@ -15,7 +15,7 @@
 
 /* Untuk Smartphone */
 @media all and (max-width: 670px) {
-  .lesson {
+  .about {
     width: 100%;
   }
   
