--- a/stylesheet.css
+++ b/stylesheet.css
@@ -198,6 +198,12 @@ header {
   font-weight: normal;
 }
 
+.message-wrapper {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
+  text-align: center;
+}
+
 .message {
   padding: 15px 40px;
   background-color: #85adad;
@@ -214,8 +220,6 @@ header {
 /*informasi*/
 
 .informasi-wrapper {
-  border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
   text-align: center;
 }
 
