--- a/stylesheet.css
+++ b/stylesheet.css
@@ -221,6 +221,8 @@ header {
 
 .informasi-wrapper {
   text-align: center;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
 }
 
 .informasi {
