--- a/stylesheet.css
+++ b/stylesheet.css
@@ -223,7 +223,7 @@ header {
   text-align: center;
   border-bottom: 1px solid #eee;
   padding-bottom: 80px;
-  background-image: url(https://image.freepik.com/free-vector/geometric-background-memphis-style_52683-35346.jpg);
+  background-image: url(https://p4.wallpaperbetter.com/wallpaper/609/737/210/landscape-sports-snowboarding-mountains-wallpaper-preview.jpg);
 }
 
 .informasi {
